// email/email.proto
syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";

package email;

service EmailService {
  rpc SendTransactionalEmail (TransactionalEmail) returns (google.protobuf.Empty) {}
}

message TransactionalEmail {
  string template_name = 1;
  map<string, string> parameters = 2;
  repeated Receiver receivers = 3;
}

message Receiver {
  string email = 1;
  string name = 2;
}
